# activityfinder

./: .gitignore  AGENTS.md  activityfinder.db  pyproject.toml
src/activityfinder/: __main__.py  cli.py  db.py  foursquare.py  geocells.py  indexer.py  models.py  recommender.py
tests/: test_cli.py  test_db.py  test_foursquare.py  test_geocells.py  test_indexer.py  test_recommender.py
